LendersApp/src/objects/SBUDefaultFilters__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Default filters for stips bulk update.</description>
    <fields>
        <fullName>AssigntoMe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>stips assign to me only.</description>
        <label>Assign to Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StageFilter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked ,default filter for stage will be same as opportunity&apos;s underwriting stage.</description>
        <inlineHelpText>If this is checked ,default filter for stage will be same as opportunity&apos;s underwriting stage.</inlineHelpText>
        <label>StageFilter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusFilter__c</fullName>
        <description>Status filter</description>
        <inlineHelpText>Status filter</inlineHelpText>
        <label>Status Filter</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>SBU Default Filters</label>
</CustomObject>